--- a/templates/base.html
+++ b/templates/base.html
@@ -32,10 +32,10 @@
                   <a class="nav-link" href="#">Logout</a> <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="#">Signup</a> <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/signup">Signup</a> <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="#">Login</a> <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/login/">Login</a> <span class="sr-only">(current)</span></a>
                 </li>
                  
                
