--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,20 @@
 
         {% extends 'base.html' %}
-        <!----------------BODY---------------->
+       
         {% block content %}
+
+        {% load cart %}
+
+         <!----------------BODY---------------->
         <div class="container-fluid mt-3">
           <div class="row">
 
             <!--filter-->
             <div class="col-lg-3 mx-auto" >
               <div class="list-group">
-                <a  class="list-group-item list-group-item-action active ">categoryies</a>
+                <a href="/" class="list-group-item list-group-item-action ">All Products</a>
                 {% for category in category %}
-                <a href="#" class="list-group-item list-group-item-action ">{{category.name}}</a>
+                <a href="/?category={{category.id}}" class="list-group-item list-group-item-action ">{{category.name}}</a>
                 {% endfor %}
                 
               </div>
@@ -27,11 +31,16 @@
                   <p class="card-title">{{product.name}}</p>
                   <p class="card-text"><b>{{product.price}}</b></p>
                   
-                  <a href="#" class="btn btn-primary border btn-sm">add to cart</a>
+                  {{ product | is_in_cart }}
+                 <form action="/" method="POST">
+                   {% csrf_token %}
+                   <input hidden type="text" name="product" value={{product.id}}>
+                   <input type="submit" class="btn btn-primary border btn-sm" value="add to cart">
+                 </form>
                 </div>
               </div>
             
-            {% endfor %}
+            {% endfor %}   
             </div>
             </div>
           </div>
